--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </footer>
     </div>
     <p class="credit">by 7ostera_dev</p>
-    <a href="https://github.com/7ostera-dev/meto" class="githube"><i class="fa-brands fa-github"></i></a>
+    <a href="https://github.com/7ostera-dev/Meto-Beta" class="githube"><i class="fa-brands fa-github"></i></a>
 
 
     <script src="script.js"></script>
