--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <!-- Open Graph Tags for Embed in Discord -->
     <meta property="og:title" content="Meto | توقعات الطقس">
     <meta property="og:description" content= "موقع لتوقعات الطقس في أي مدينة بالعالم">
-    <meta property="og:url" content="https://7ostera-dev.github.io/Meto-Beta/">
+    <meta property="og:url" content="https://7osteradev.github.io/Meto-Beta/">
     <meta property="og:type" content="website">
     
     <!-- الصورة التي ستظهر في الإيمبيد -->
